2002-11-27  Steve M. Robbins  <steve@nyongwa.montreal.qc.ca>

	* tools/bicobj2vtk.c: Handle LINES object type.

2002-09-05  Jason Lerch		<jason@bic.mni.mcgill.ca>

	* updated the NEWS file so that make dist works.

2002-05-15  Steve M. Robbins  <steve@nyongwa.montreal.qc.ca>

	* Include/*.h: Remove rcsid strings from public headers.

2002-04-26  Steve ROBBINS  <stever@bic.mni.mcgill.ca>

	* tools/ParseArgv.c:
	* tools/ParseArgv.h: Remove.  These are now installed with
	MINC 1.0.

	* autogen.sh: Run libtoolize.

2001-12-21  Steve M. Robbins  <steve@nyongwa.montreal.qc.ca>

	* tools/bicobj2vtk.c: New.  Transform polygons into VTK
	data file.

	* tools/ParseArgv.c:
	* tools/ParseArgv.h: New.  Temporarily add these until they
	are available elsewhere (e.g. MINC).

2001-10-19  Steve ROBBINS  <stever@bic.mni.mcgill.ca>

	* Objects/object_io.c: Document TEXT object file format.

2001-08-11  Steve M. Robbins  <steve@nyongwa.montreal.qc.ca>

	* configure.in: Bump version to 1.3.8.

	* INSTALL.bicpl: 
	* NEWS: Updated.

	* Makefile.am (libbicpl_la_LDFLAGS): Increment current version for
	library, due to 2001-07-04 change.

	* configure.in: Bump version to 1.3.7.
	Add AC_PREREQ to force autoconf 2.5x usage.

2001-07-25  Steve M. Robbins  <steve@nyongwa.montreal.qc.ca>

	* m4/smr_OPTIONAL_LIB.m4: Define HAVE_libfoo, if library foo is
	found.

	* configure.in: Accomodate above change.

2001-07-24  Steve M. Robbins  <steve@nyongwa.montreal.qc.ca>

	* tools/Makefile.am: Don't build biobj2ply, make_mesh_map.

	* autogen.sh: Improved ordering; stop on error; use "aclocal -I m4".

	* acinclude.m4: Remove.

	* m4/smr_OPTIONAL_LIB.m4:
	* m4/smr_REQUIRED_LIB.m4:
	* m4/smr_WITH_BUILD_PATH.m4: New files.  These replace the old
	smr_CHECK_LIB macro in acinclude.m4.

	* Makefile.am (EXTRA_DIST): Distribute new m4 files.

	* configure.in: Use new macros.

2001-07-20  Steve M. Robbins  <steve@nyongwa.montreal.qc.ca>

	Tagged as release-1_3_6.
