@@ -4,4 +4,3 @@ noinst_LTLIBRARIES = libbicpl_i.la
 libbicpl_i_la_SOURCES = crop_image.c rgb_io.c
 
 EXTRA_libbicpl_i_la_SOURCES = rgb_io_ppm.c rgb_io_sgi.c rgb_io_none.c
-
