@@ -1,5 +1,9 @@
 2002-11-27  Steve M. Robbins  <steve@nyongwa.montreal.qc.ca>
 
+	* Testing/Makefile.am: New.  Not all programs compile.
+
+	* Images/rgb_io_ppm.c (input_rgb_file): Enable this code.
+
 	* tools/bicobj2vtk.c: Handle LINES object type.
 
 2002-09-05  Jason Lerch		<jason@bic.mni.mcgill.ca>
